tests/checker/diagnostics/0586_functor_opaque_result_operator_mismatch_04.ml.infer.expected
File "0586_functor_opaque_result_operator_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0586_functor_opaque_result_operator_mismatch_04 is not a valid module name.

File "0586_functor_opaque_result_operator_mismatch_04.ml", line 22, characters 8-19:
22 | let _ = Out_delta.y + 4
             ^^^^^^^^^^^
Error: The value Out_delta.y has type Out_delta.u = Make_delta(Input_delta).u
       but an expression was expected of type int
